fix #6498 - useRealWidth does not work with digit numbers
git-svn-id: http://josm.openstreetmap.de/svn/trunk@4169 0c6e7542-c601-0410-84e7-c038aed88b3b